<resources>
    <string name="app_name">homeworkTwelfth</string>
    <string name="login">用户登录</string>
    <string name="user_hint">请输入用户名/手机/邮箱</string>
    <string name="password_hint">请输入登陆密码</string>
    <string name="btn_login">登录</string>
    <string name="findPassword">找回密码</string>
    <string name="register">快速注册</string>
    <string name="user_register">用户注册</string>
    <string name="password_hint2">请输入密码</string>
    <string name="btn_register">注册</string>
    <string name="menu_main">首页</string>
    <string name="menu_shop">购物</string>
    <string name="menu_me">我的</string>
    <string name="mygoods">我的商品</string>
    <string name="myscore">我的积分</string>
    <string name="myright">我的特权</string>
    <string name="tel">电话</string>
    <string name="qq">QQ</string>
    <string name="wechat">微信</string>
    <string name="login_in">我的账户</string>


    <string-array name="main_menu">
        <item>飞机票</item>
        <item>车票</item>
        <item>汽车</item>
        <item>蛋糕</item>
        <item>美食</item>
        <item>手表</item>
        <item>电视</item>
        <item>手机</item>
    </string-array>
</resources>
