<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/colorGreen"
        android:orientation="horizontal"
        android:paddingLeft="20dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/userregister"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_in"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:padding="0dp"
        android:layout_marginTop="25dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/scar"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mygoods"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:padding="0dp"
        android:layout_marginTop="25dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/score3x"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myscore"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:padding="0dp"
        android:layout_marginTop="2dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/right3x"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myright"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:padding="0dp"
        android:layout_marginTop="25dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_tel3x"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:padding="0dp"
        android:layout_marginTop="2dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/qq"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:padding="0dp"
        android:layout_marginTop="2dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_weixin3x"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wechat"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>