<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--内容-->
    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </RelativeLayout>


    <!--功能菜单-->
    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:id="@+id/menu_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/indexitem"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_main"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/shopindex"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_shop"
                android:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/useritem"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_me"
                android:textColor="#000000"/>

        </LinearLayout>
    </LinearLayout>




</LinearLayout>
